// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders application with retro-certs 1`] = `
<Suspense
  fallback="Loading..."
>
  <Switch>
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
      path="/guide"
    />
    <RetroCertsRoute
      isProduction={false}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/landing"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={false}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/what-to-expect"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={false}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/certify/:week"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={false}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/confirmation"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={false}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification"
    />
    <Route>
      <PageNotFound />
    </Route>
  </Switch>
</Suspense>
`;

exports[`<App /> renders application without retro-certs 1`] = `
<Suspense
  fallback="Loading..."
>
  <Switch>
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
      path="/guide"
    />
    <RetroCertsRoute
      isProduction={true}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/landing"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={true}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/what-to-expect"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={true}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/certify/:week"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={true}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification/confirmation"
      requiresAuthentication={true}
    />
    <RetroCertsRoute
      isProduction={true}
      pageComponent={[Function]}
      pageProps={
        Object {
          "setUserData": [Function],
          "userData": Object {
            "status": "not-logged-in",
          },
        }
      }
      path="/retroactive-certification"
    />
    <Route>
      <PageNotFound />
    </Route>
  </Switch>
</Suspense>
`;
